fix banner and footer wraps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,14 +34,29 @@ h1 {
   min-width: 300px;
 }
 
-li {padding: 5%;}
+li {
+  padding: 5%; font-weight: 500; 
+}
 
+banner {
+  display: flex; 
+  flex-wrap: wrap; 
+  width: 100%; 
+  height: 100%;
+  /*padding-bottom: 2%;*/
+  justify-content: right;
+}
 
+h2 {
+  color: #fff; 
+  font-family: cursive;
+  font-size: 200%;
+  padding: 4% 2% 2% 2%;
+  justify-content: center;
 
-banner {display: flex;
-    width: 100%; height: 100%; }
-
-h2 {color: #fff; font-family: cursive; /*display: flex; flex-wrap: wrap; justify-content: center;*/ padding-top: 3%; padding-left: 75%; font-size: xx-large; }
+  
+    
+}
 
 .background-pic {
     height: 200px;
@@ -51,8 +66,6 @@ h2 {color: #fff; font-family: cursive; /*display: flex; flex-wrap: wrap; justify
     background-size: cover;
     background-position: center;
 }
-
-img {width: 100%;}
 
 .about-me, .work, .contact {
   display: flex; 
@@ -64,49 +77,110 @@ img {width: 100%;}
   border-width: 15px;
   }
 
-.heading {display: inline-flex; margin-right: 2px; border-right: solid; border-right-color: grey; border-width: 3px; padding-right: 1%; width: 15%; justify-content: right; padding-top: 5%;}    
+.heading {
+  display: inline-flex; 
+  margin-right: 2px; 
+  border-right: solid; 
+  border-right-color: grey; 
+  border-width: 3px; 
+  padding-right: 1%; 
+  width: 15%; 
+  justify-content: right; 
+  padding-top: 5%;
+}    
 
-.bio { display: flex; padding-top: 40px; padding-right: 25px; padding-left: 25px; width: 75%; justify-content: space-between;}
+.bio {
+  display: flex; 
+  padding-top: 40px; 
+  padding-right: 25px; 
+  padding-left: 25px; 
+  width: 75%; 
+  /*justify-content: space-between;*/
+}
 
-
-#sarah-pic {width: 50%; min-width: 300px;}
-
-
-
-.port { display: flex; flex-wrap: wrap; padding-right: 25px; padding-left: 25px; width: 75%; justify-content: center;}
+.port {
+  display: flex; 
+  flex-wrap: wrap; 
+  padding-right: 25px; 
+  padding-left: 25px; 
+  width: 75%; 
+  /*justify-content: space-evenly;*/
+  justify-content: center;
+}
     
+.contact-list {
+  display: flex; 
+  flex-wrap: wrap; 
+  padding-top: 40px; 
+  padding-right: 25px; 
+  padding-left: 25px; 
+  width: 75%; 
+  /* come back to space-around when contact list items are in border*/
+  justify-content: center;
+  list-style-type: none; 
+}
 
-.contact-list {display: inline-flex; flex-wrap: wrap; padding-top: 40px; padding-right: 25px; padding-left: 25px; width: 75%; justify-content: space-between;}
+img {
+  width: 100%;
+}
 
-.port-img {padding: 10px; width: 50%; flex: 0 0 500px; border: solid; 
-  border-width: 2px; border-color: lightgrey; margin: 10px; background-color: lightblue;}
+#sarah-pic {
+  width: 50%; 
+  min-width: 300px;
+}  
 
-#img1 {background-color: lightgrey}
+.main-port-img {
+  padding: 10px; 
+  width: 80%; 
+  border: solid; 
+  border-width: 2px; 
+  border-color: lightgrey; 
+  margin: 10px; 
+  min-width: 500px;
+}
 
-#img2 {background-color: rgb(177, 234, 255);}
+.port-img {
+  padding: 10px; 
+  width: 50%; 
+  flex: 0 0 500px; 
+  border: solid; 
+  border-width: 2px; 
+  border-color: lightgrey; 
+  margin: 10px; 
+}
 
-#img5 {background-color: rgba(253, 154, 147, 0.912);}
+#img2 {
+  background-color: lightgrey;
+}
 
-#img4 {background-color: lightgrey;}
+#img3 {
+  background-color: rgb(177, 234, 255);
+}
 
-.main-port-img {padding: 10px; width: 80%; border: solid; 
-  border-width: 2px; border-color: lightgrey; margin: 10px; min-width: 500px;}
+#img4 {
+  background-color: rgba(253, 154, 147, 0.912);
+}
 
- h4 {color: black; float: right; } 
+#img5 {
+  background-color: lightgrey;
+}
 
- a {text-decoration: none; color: black; }
+h4 {color: black; float: right; } 
 
- a:hover {font-size: large; font-weight: bold; color: rgb(18, 86, 113);}
+a {text-decoration: none; color: black;}
 
- .contact-items {
+a:hover {font-size: large; font-weight: bold; color: rgb(18, 86, 113); }
+
+/*.contact-items {
   list-style-type: none; 
   display: flex; 
-  /*justify-content: center;*/
   margin: 0;
+
   min-width: 300px; 
   border: solid;
   border-color: black;
-} 
+  text-align: center;
+} */
   /*background-image: url(/portfolio/assets/images/pexels-scott-webb-311458.jpg);
   background-size: cover;
   background-position: center;
@@ -141,29 +215,42 @@ img {width: 100%;}
         } }
 
 @media screen and (max-width: 768px) {
-          .heading {
+          .heading, banner {
             border: none; padding: none; justify-content: center;
           } }
 
 @media screen and (max-width: 768px) {
             h4 {
-              float: none; text-align: center;
+              float: none; text-align: center; padding: 0%;
             } }
 
-@media screen and (max-width: 768px) {
-              h2 {
-                text-align: center; padding-left: 60px; 
+/*@media screen and (max-width: 768px) {
+              banner {
+                justify-content: center;
               } }
 
+@media screen and (max-width: 768px) {
+                h2 {
+                  margin: 0; 
+                
+                } }*/
 @media screen and (max-width: 768px) {
                 h3 {
                   text-align: center; 
                 } }         
-                
+@media screen and (max-width: 768px) {
+                  h2 {
+                    margin: auto; 
+                  } }                   
 @media screen and (max-width: 768px) {
                   li {
                     justify-items: center; text-align: center;
-                  } }                    
+                  } }      
+
+@media screen and (max-width: 768px) {
+                    .contact {
+                      background-color: rgba(255, 92, 80, 0.912); color: white;
+                    } }                                  
 /* Tablets - header changes color */
 /*@media screen and (max-width: 992px) {
     header {
